--- a/main.css
+++ b/main.css
@@ -581,3 +581,30 @@ button.back-all{
 button.back-all:hover{
     background-color: #d6d6d6;
 }
+
+.attention{
+    display: block;
+    background-color: #D4E2F8;
+    padding: 12px 30px;
+    display: none;
+    margin-bottom: 20px;
+}
+.attention h4{
+    padding: 0 0 10px 0;
+    margin: 0;
+    font-weight: bold;
+    font-size: 16px;
+}
+.attention p{
+    padding: 0;
+    margin: 0;
+    font-weight: normal;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.acceptance-contact span{
+    font-size: 14px;
+    font-weight: normal;
+    font-family: "Montserrat", sans-serif;
+}
